--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,17 +7,17 @@ android {
     defaultConfig {
         applicationId "simplified.creative.codes.nest"
         compileSdk 30
-        minSdk 22
+        minSdk 21
         targetSdk 30
         versionCode 1
-        versionName "1.0"
+        versionName "TheNest"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
         release {
-            storeFile file("/media/Files/Android/Projects/Keystore/GHOST.keystore")
+            storeFile file("/home/user/Files/Android/APP Development/Keystore/GHOST.keystore")
             keyAlias "GHOST"
             storePassword "universe"
             keyPassword "universe"
