--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdk 21
         targetSdk 30
         versionCode 1
-        versionName "TheNest"
+        versionName "0.0.F.S"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
